--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,60 @@
+:root {
+    --primary-color: #1992D4;
+    --secondary-color: #F8F8F8;
+    --light-text-color: #F8F8F8;
+    --content-bg-color: #E2E8F0;
+}
+
+
+body{
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: minmax(220px ,1fr) 5fr;
+    grid-template-rows: 1fr 10fr;
+}
+.sidebar {
+    background-color: var(--primary-color);
+    grid-row: 1 / 3;
+    padding: 16px 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 40px;
+    color:white
+}
+.sidebar a {
+    text-decoration: none;
+    color: white;
+}
+.sidebar > .logo {
+    font-size: x-large;
+}
+iconify-icon {
+    font-size: 1.5em;
+}
+.sidebar > .logo , .sidebar  .sidebar-item {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.sidebar > .sidebar-nav , .sidebar-settings {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.header {
+    background-color: white;
+    grid-column: 2 / 3;
+}
+
+.content{
+    background-color: var(--content-bg-color) ;
+    grid-column: 2 / 3;
+}
 img{
     max-width: 64px;
 }
