--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #1992D4;
     --secondary-color: #F8F8F8;
-    --light-text-color: #F8F8F8;
+    --light-text-color: #494949;
     --content-bg-color: #E2E8F0;
 }
 
@@ -10,10 +10,11 @@ body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    height: 100vh;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: minmax(220px ,1fr) 5fr;
-    grid-template-rows: 1fr 10fr;
+    grid-template-rows: min-content 1fr;
+    
 }
 .sidebar {
     background-color: var(--primary-color);
@@ -23,7 +24,8 @@ body{
     flex-direction: column;
     justify-content: flex-start;
     gap: 40px;
-    color:white
+    color:white;
+    /* overflow: auto; */
 }
 .sidebar a {
     text-decoration: none;
@@ -46,15 +48,111 @@ iconify-icon {
     flex-direction: column;
     gap: 16px;
 }
+
+
+
 .header {
+    padding: 16px 32px;
     background-color: white;
     grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
+    gap: 16px;
+}
+.header > * {
+    /* padding: 8px 16px; */
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+.search-bar > input {
+    padding: 4px 16px;
+    background-color: var(--content-bg-color);
+    border-radius: 10px;
+    border: none;
+    flex: 1;
+    max-width: 75%;
+}
+.notif-section > img{
+    width: 50px;
+}
+.welcome > p {
+    margin-top: 0;
+    font-size: smaller;
+    margin-bottom: 4px;
+}
+.welcome > span {
+    font-size: large;
+    font-weight: bold;
 }
 
-.content{
+.commands > button {
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    border-radius: 16px;
+    padding: 8px 20px;
+    cursor:pointer;
+    font-weight: 600;
+    gap: 32px;
+
+}
+
+.main {
     background-color: var(--content-bg-color) ;
     grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 32px 32px;
+    gap: 16px;
 }
+.title{
+    font-weight: bold;
+    margin-bottom: 1ch;
+}
+.content {
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+.card-container {
+    display: grid;
+    gap: 16px;
+    grid-template-columns: 1fr 1fr;
+}
+.card { 
+    padding: 20px;
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+}
+
+.card-container > .card {
+    border-left: 3px solid #F0B429;
+    display: grid;
+    grid-template-rows: 1fr min-content;
+}
+.card-actions {
+    display: flex;
+    gap: 16px;
+    justify-content: flex-end;
+}
+.card-actions > iconify-icon {
+    cursor: pointer;
+    color: var(--light-text-color);
+}
+.card > .title {
+    font-weight: bold;
+    margin-bottom: 1ch;
+}
+.card p {
+    margin: 0;
+    color: var(--light-text-color);
+    font-size: small;
+}
+
 img{
     max-width: 64px;
 }
